--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
+    "@types/node": "^20.2.5",
     "typescript": "^5.1.3"
   },
   "dependencies": {
