--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "npm for lazy people",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint --ext .ts src",
+    "lint:fix": "eslint --ext .ts src --fix"
   },
   "bin": {
     "lnpm": "./dist/index.js"
@@ -15,6 +17,12 @@
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
     "@types/node": "^20.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.8",
     "typescript": "^5.1.3"
   },
   "dependencies": {
