--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "npm for lazy people",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "lint": "eslint --ext .ts src",
     "lint:fix": "eslint --ext .ts src --fix"
   },
@@ -15,17 +15,28 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@npm/types": "^1.0.2",
     "@tsconfig/node18": "^2.0.1",
     "@types/node": "^20.2.5",
+    "@types/npmcli__package-json": "^2.0.0",
+    "@types/pacote": "^11.1.5",
+    "@types/semver": "^7.5.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
+    "axios": "^1.4.0",
+    "esbuild": "^0.18.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.8",
+    "tsc-alias": "^1.8.6",
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "commander": "^10.0.1"
+    "@npmcli/package-json": "^3.1.1",
+    "chalk": "4",
+    "commander": "^10.0.1",
+    "pacote": "^15.2.0",
+    "semver": "^7.5.1"
   }
 }
